Fix for missing filter button on iphone

--- a/front-gateway/src/components/Search/style/filter.scss
+++ b/front-gateway/src/components/Search/style/filter.scss
@@ -11,7 +11,7 @@
   text-align: center;
   top: 72px;
   width: 100%;
-  z-index: 2;
+  z-index: 1;
 
   button {
     box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.15);
@@ -32,22 +32,13 @@
 
 .filter-wrapper {
   background-color: $brand-white;
-  padding: 24px 0 0;
+  padding: 65px 0 0;
 
   @media (max-width: $screen-sm-max) {
     @include box-shadow(0 2px 10px 0 rgba(0, 0, 0, 0.2));
   }
 
   @media (max-width: $screen-xs-max) {
-    bottom: 0;
-    left: 0;
-    overflow-y: scroll; /* has to be scroll, not auto */
-    -webkit-overflow-scrolling: touch;
-    position: absolute;
-    right: 0;
-    top: 62px;
-    z-index: 1;
-
     &.hide-mobile-filter {
       display: none;
     }
